// ConvergeThread ERD — dbdiagram.io syntax
// Source of truth for database structure. Update when migrations change.

Table tenants {
  id int [pk, increment]
  slug varchar(255) [unique, not null]
  admin_email varchar(255) [not null]
  created_at timestamp
  updated_at timestamp
}

Table tenant_closures {
  id int [pk, increment]
  tenant_id int [not null, unique, ref: > tenants.id, note: 'on delete cascade']
  closed_by_id int [null, ref: > users.id, note: 'on delete set null']
  closed_at timestamp [not null]
  created_at timestamp
  updated_at timestamp
}

Table tenant_roles {
  id int [pk, increment]
  tenant_id int [null, ref: > tenants.id, note: 'on delete cascade']
  is_system boolean [not null, default: false]
  name varchar(100) [not null]
  color varchar(7) [null, note: 'hex e.g. #ef4444']
  permissions json [not null]
  created_at timestamp
  updated_at timestamp

  indexes {
    (tenant_id, name) [unique]
    (name, is_system) [unique]
  }
}

Table users {
  id int [pk, increment]
  email varchar(255) [unique, not null]
  password varchar(255) [not null]
  username varchar(100) [not null]
  display_name varchar(100) [null]
  tenant_id int [not null, ref: > tenants.id, note: 'on delete cascade']
  tenant_role_id int [null, ref: > tenant_roles.id, note: 'on delete set null']
  banned_by_id int [null, ref: > users.id, note: 'on delete set null']
  created_at timestamp
  updated_at timestamp

  indexes {
    (tenant_id, username) [unique]
  }
}

Table groups {
  id int [pk, increment]
  tenant_id int [not null, ref: > tenants.id, note: 'on delete cascade']
  name varchar(255) [not null]
  creator_id int [not null, ref: > users.id, note: 'on delete cascade']
  created_at timestamp
  updated_at timestamp
}

Table group_role_overrides {
  id int [pk, increment]
  group_id int [not null, ref: > groups.id, note: 'on delete cascade']
  tenant_role_id int [not null, ref: > tenant_roles.id, note: 'on delete cascade']
  permissions json [null]
  created_at timestamp
  updated_at timestamp
}

Table group_members {
  id int [pk, increment]
  group_id int [not null, ref: > groups.id, note: 'on delete cascade']
  user_id int [not null, ref: > users.id, note: 'on delete cascade']
  group_role_override_id int [null, ref: > group_role_overrides.id, note: 'on delete set null']
  left_at timestamp [null]
  created_at timestamp
  updated_at timestamp
}

Table duos {
  id int [pk, increment]
  group_id int [not null, ref: > groups.id, note: 'on delete cascade']
  name varchar(255) [not null]
  user1_id int [not null, ref: > users.id, note: 'on delete cascade']
  user2_id int [not null, ref: > users.id, note: 'on delete cascade']
  created_at timestamp
  updated_at timestamp

  indexes {
    (user1_id, user2_id) [unique]
  }
}

Table merge_sessions {
  id int [pk, increment]
  started_at timestamp [default: `now()`]
  ended_at timestamp [null]
  Note: 'Scoped to workspace via groups.tenant_id (forTenant scope)'
}

Table merge_session_groups {
  merge_session_id int [pk, ref: > merge_sessions.id, note: 'on delete cascade']
  group_id int [pk, ref: > groups.id, note: 'on delete cascade']
}

Table invitations {
  id int [pk, increment]
  tenant_id int [null, ref: > tenants.id, note: 'on delete cascade — null for owner admin invites']
  group_id int [null, ref: > groups.id, note: 'on delete set null']
  invited_by_id int [not null, ref: > users.id, note: 'on delete cascade']
  tenant_role_id int [null, ref: > tenant_roles.id, note: 'on delete set null']
  email varchar(255) [not null]
  token varchar(100) [unique, not null]
  expires_at timestamp [null]
  accepted_at timestamp [null]
  created_at timestamp [default: `now()`]
}

Table messages {
  id int [pk, increment]
  chatable_id bigint [not null]
  chatable_type varchar(20) [not null]
  user_id int [not null, ref: > users.id, note: 'on delete cascade']
  content text [null]
  is_file boolean [not null, default: false]
  file_path varchar(500) [null, note: 'legacy single-file path']
  parent_id int [null, ref: > messages.id, note: 'on delete cascade']
  created_at timestamp
  updated_at timestamp

  indexes {
    (chatable_type, chatable_id, parent_id, id)
  }
}

Table message_attachments {
  id int [pk, increment]
  message_id int [not null, ref: > messages.id, note: 'on delete cascade']
  file_path varchar(500) [not null]
  original_name varchar(255) [null]
  sort smallint [not null, default: 0]
  created_at timestamp
  updated_at timestamp
}

Table message_mentions {
  id int [pk, increment]
  message_id int [not null, ref: > messages.id, note: 'on delete cascade']
  user_id int [not null, ref: > users.id, note: 'on delete cascade']
  mention_type varchar(50) [null]
  read_at timestamp [null]
  created_at timestamp
  updated_at timestamp
}

Table notifications {
  id uuid [pk]
  type varchar(255) [not null]
  notifiable_type varchar(255) [not null]
  notifiable_id bigint [not null]
  data text [not null]
  read_at timestamp [null]
  created_at timestamp
  updated_at timestamp
}

Table role_hierarchies {
  id int [pk, increment]
  tenant_id int [not null, ref: > tenants.id, note: 'on delete cascade']
  name varchar(100) [not null]
  created_at timestamp
  updated_at timestamp
}

Table role_hierarchy_levels {
  id int [pk, increment]
  role_hierarchy_id int [not null, ref: > role_hierarchies.id, note: 'on delete cascade']
  level int [not null]
  label varchar(100) [null]
  created_at timestamp
  updated_at timestamp
}

Table role_hierarchy_level_user {
  role_hierarchy_level_id int [pk, ref: > role_hierarchy_levels.id, note: 'on delete cascade']
  user_id int [pk, ref: > users.id, note: 'on delete cascade']
}

Table chat_mutes {
  id int [pk, increment]
  user_id int [not null, ref: > users.id, note: 'on delete cascade']
  chatable_type varchar(20) [not null]
  chatable_id bigint [not null]
  created_at timestamp
  updated_at timestamp
}

Table thread_mutes {
  id int [pk, increment]
  user_id int [not null, ref: > users.id, note: 'on delete cascade']
  message_id int [not null, ref: > messages.id, note: 'on delete cascade']
  created_at timestamp
  updated_at timestamp
}
